syntax = "proto3";

package authentication.v1;

import "authentication/v1/schema.proto";
import "common/v1/pagination.proto";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
  rpc ResetUserPassword(ResetUserPasswordRequest) returns (ResetUserPasswordResponse) {}
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse) {}
}

message CreateUserRequest {
  string email = 1;
  string full_name = 2;
  string password = 3;
}
message CreateUserResponse {
  authentication.v1.User user = 1;
}

message DeleteUserRequest {
  string user_id = 1;
}
message DeleteUserResponse {}

message ResetUserPasswordRequest {
  string user_id = 1;
  string password = 2;
}
message ResetUserPasswordResponse {}

message UpdateUserRequest {
  authentication.v1.User user = 1;
}
message UpdateUserResponse {
  authentication.v1.User user = 1;
}

message GetUsersRequest {
  common.v1.PaginationRequest pagination = 1;
}
message GetUsersResponse {
  repeated authentication.v1.User users = 1;
}
